# hysteron-tgraphs

./: .gitignore  INSTALL.md  LICENSE  README.md  candidategraphs.py  model.py  parametrizations.py  plotting.py  pyproject.toml  requirements.txt  walkthrough.ipynb
scripts/: graph_analysis.py  polyhedron_analysis.py  walkthrough.ipynb
src/: candidategraphs.py  parametrizations.py
src/hysteron_tgraphs/: candidategraphs.py  graph_analysis.py  model.py  parametrizations.py  plotting.py  polyhedron_analysis.py
tests/: test_model.py
