[project]
name = "hysteron-tgraphs"
authors = {"Margot Teunisse"}
requires-python = "3.12"
version = "1.1.0"
dependencies = ["numpy==1.26.4",
                "scipy==1.13.1"]
readme = "README.md"
license = "MIT"

[project.optional-dependencies]
plotting = ["matplotlib==3.9.2"]
graph-analysis = ["networkx==3.3"]
polyhedron-analysis =["pycddlib==2.1.8.post1"]
dev = ["pytest==9.0.1",
       "autodocstring==0.1.2"]