[project]
name = "hysteron-tgraphs"
authors = [{name = "Margot Teunisse"}]
requires-python = ">=3.12"
version = "1.1.0"
dependencies = ["numpy==1.26.4",
                "scipy==1.13.1"]
readme = "README.md"
license = "MIT"

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"